# predictive-modeling-ai

./: .dockerignore  .env.prod.example  .env.prod.tls.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.caddy.yml  docker-compose.prod.tls.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml  deploy.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-ai-narrative-backend/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-score-panel-redesign/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-demo-flow-portfolio-dashboard/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-monitoring-panel/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
config/: data_paths.yaml  features.yaml  fred.yaml  labeling.yaml  mlflow.yaml  settings.py  training.yaml
data/: README.md
data/auth/: users.sqlite3
data_ingestion/: ingest_fannie.py  ingest_fred.py  loader.py  schema.py  seed_demo.py  sources.py
deploy/caddy/: Caddyfile
deploy/nginx/: nginx.conf  nginx.tls.conf
docs/: API_CONTRACT.md  CI_CD_RUNBOOK.md  DEPLOYMENT_PROD.md  FRONTEND_MVP.md  ONBOARDING_CHECKLIST.md  OPS_RUNBOOK.md  RENDER_DEPLOY.md  TLS_HARDENING.md  UI_OPERATOR_RUNBOOK.md
features/: build_features.py  engineer.py  feature_defs.py  labels.py  macro_join.py
models/: offline_eval.py  policy.py  registry.py
monitoring/: __init__.py  drift.py  metrics.py  perf_drift.py  score_drift.py
reports/: baseline_metrics.json  model_card.md  policy_comparison.json  policy_comparison.md
reports/monitoring/: drift_features.json  score_drift.json  summary.md
scripts/: golden_path.sh
service/: api.py  app.py  auth.py  jobs.py  model_loader.py  schemas.py
service/static/: app.js  index.html  styles.css
tests/: test_ai_interpret.py  test_api_contract.py  test_auth_user_mode.py  test_build_features_perf_summary.py  test_calibration.py  test_data_ingestion.py  test_demo_flow.py  test_demo_forecaster.py  test_feature_defs.py  test_features.py  test_ingest_fannie.py  test_ingest_fred.py  test_interpretability.py  test_jobs_api.py  test_labels.py  test_logging.py  test_macro_join.py  test_mlflow_training.py  test_model_lifecycle_api.py  test_model_loader.py  test_model_registry.py  test_monitoring.py  test_score_panel.py  test_seed_demo.py  test_service_smoke.py  test_settings.py  test_split.py  test_train_baseline.py  test_train_xgb.py  test_training.py
training/: calibration.py  interpretability.py  split.py  train_baseline.py  train_xgb.py  trainer.py
utils/: logging.py
